# uff-reader

./: .gitattributes  .gitignore  LICENSE  README.md  debug_h5_dict.py  diff_check.py  h5_diff.py  kwave.py  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  pytest.yml  test.yml
src/uff/: .transmit_setup.py.swp  \  __init__.py  _version.py  aperture.py  channel_data.py  curviliear_array.py  cylindrical_wave_origin.py  element.py  element_geometry.py  event.py  excitation.py  file_spec.py  impulse_response.py  linear_array.py  linear_lsprobe.py  matrix_array.py  origin.py  perimeter.py  plane_wave_origin.py  position.py  probe.py  receive_setup.py  recieve_setup.py  rotation.py  spherical_wave_origin.py  time_zero_reference_point.py  timed_event.py  transform.py  translation.py  transmit_event.py  transmit_setup.py  transmit_wave.py  tx_rx_base.py  uff.py  (+5 more)
tests/: test_annotations.py  test_aperture.py  test_kwave.py  test_linear_scan_focus_beams.py  test_load.py  test_meta.py  test_position.py  test_probe.py  test_receive_setup.py  test_transforms.py  test_transmit_setup.py  test_uff.py  test_wave_geometry.py
uff/: aperture.py  channel_data.py  curviliear_array.py  element.py  element_geometry.py  event.py  excitation.py  impulse_response.py  linear_array.py  matrix_array.py  origin.py  perimeter.py  plane_wave_origin.py  position.py  probe.py  rotation.py  spherical_wave_origin.py  timed_event.py  translation.py  transmit_event.py  transmit_wave.py  uff.py  wave.py  wave_type.py
(+11 files in other folders)
