[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uff-reader"
description = "Python interface for the Ultrasound File Format (UFF)"
readme = "README.md"
license = "MIT"
version = "0.0.2"
authors = [
    { name = "Walter Simson", email = "walter.simson@tum.de" },
]
dependencies = [
    "h5py>=3.5.0",
    "numpy>=1.20",
    "pytest>=6.2.4",
    "requests>=2.26.0",
    "scipy>=1.7.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "uff",
]
